edits spacing in app.js moves script tags for fonts and boostrap to before closing body fixes places section when toggled on to be over fs panel declares fon-family, font-weight and font-size in body and eliminates it in other locations

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Laila', serif;
+  font-weight: 400;
+  font-size: 1em;
 }
 
 .container-fluid {
@@ -15,7 +18,6 @@ body {
 }
 
 #errorGoogle {
-  font-family: 'Laila', serif;
   font-weight: 600;
   font-size: 30px;
   color: #cc0000;
@@ -26,7 +28,6 @@ body {
 }
 
 #h1 {
-  font-family: 'Laila', serif;
   font-size: 40px;
   font-weight: 600;
   color: #fff7e6;
@@ -63,7 +64,6 @@ body {
 
 .filter-buttons {
   background-color: #009933;
-  font-family: 'Laila', serif;
   color: #fff;
   display: inline-block;
   border-radius: 10px;
@@ -71,15 +71,12 @@ body {
 
 #filter-places {
   width: 90%;
-  -moz-box-shadow:    1px 1px 2px 1px #ccc;
-  -webkit-box-shadow: 1px 1px 2px 1px #ccc;
-  box-shadow:         1px 1px 2px 1px #ccc;
+  box-shadow: 1px 1px 2px 1px #ccc;
   margin-top: 5px;
 }
 /*filter box hold text */
 ::placeholder {
   color: #d9d9d9;
-  font-size: 1em;
 }
 
 #places-section {
@@ -114,9 +111,7 @@ body {
 }
 
 #no_fs_near {
-  font-family: 'Laila', serif;
   font-size: 20px;
-  font-weight: 400;
   color: #009933;
   text-align: center;
   margin-top: 25px;
@@ -124,49 +119,32 @@ body {
 
 /*places list of items*/
 .list-items {
-  font-family: 'Laila', serif;
   font-size: 16px;
-  font-weight: 400;
   color: #009933;
   margin-bottom: 5px;
 }
 
 #toggle-off-places {
-  font-family: 'Laila', serif;
   color: #fff;
   font-size: 16px;
-  font-weight: 400;
   width: 20vw;
   background-color: #009933;
   border: none;
   margin: 0 0 7px 0;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
   border-radius: 8px;
-  -webkit-box-shadow: 0 5px 0 #006622;
-  -moz-box-shadow: 0 5px 0 #006622;
   box-shadow: 0 5px 0 #006622;
   /*gives button 'button' motion*/
-  -webkit-transition: all .1s ease;
-	-moz-transition:    all .1s ease;
-	-ms-transition:     all .1s ease;
-	-o-transition:      all .1s ease;
-	transition:         all .1s ease;
+	transition: all .1s ease;
 }
 
 /*gives toggle buttom 3d-ish look*/
 #toggle-off-places:active {
-  -webkit-box-shadow: 0 3px 0 #fff, 0 3px 6px #ccc;
-  -moz-box-shadow:    0 3px 0 #fff, 0 3px 6px #ccc;
-  box-shadow:         0 3px 0 #fff, 0 3px 6px #ccc;
+  box-shadow: 0 3px 0 #fff, 0 3px 6px #ccc;
   position: relative;
   top: 6px;
 }
 
 #places-details {
-  font-family: 'Laila', serif;
-  font-size: 1em;
-  font-weight: 400;
   width: 300px;
   height: 200px;
   overflow: auto;
@@ -180,8 +158,6 @@ body {
  #place-name {
   background-color: #fff7e6;
   height: 30px;
-  font-family: 'Laila', serif;
-  font-weight: 400;
   font-size: 1.4em;
   text-align: center;
   border-bottom: 7px double #006622;
@@ -194,7 +170,6 @@ body {
 /*in infowindow */
 #website {
   color: #006622;
-  font-size: 1em;
 }
 
 #pano {
@@ -205,7 +180,6 @@ body {
 }
 
 #fs_h2 {
-  font-family: 'Laila', serif;
   font-weight: 600;
   font-size: 1.5em;
   color: #006622;
@@ -214,10 +188,7 @@ body {
 }
 
 #fs_h3 {
-  font-family: 'Laila', serif;
-  font-weight: 400;
   font-style: italic;
-  font-size: 1em;
   color: #006622;
   margin: 0;
   padding: 0;
@@ -227,11 +198,18 @@ body {
   width: 30vw;
   max-height: 60vh;
   overflow: auto;
-  z-index: 10;
+  z-index: 9;
   position: absolute;
   background-color: #c6ecd9;
   float: left;
   text-align: center;
+}
+
+/*inactivates FS links when no website is found*/
+.not-active {
+  pointer-events: none;
+  cursor: default;
+  color: #000;
 }
 
 /*fades bottom of Foursquare results */
@@ -260,18 +238,13 @@ body {
 }
 
 .h3_name {
-  font-family: 'Laila', serif;
   font-weight: 600;
-  font-size: 1em;
   color: #006622;
   margin: 8px 0 0 0;
   padding: 0;
 }
 
 .span_address, .span_distance {
-  font-family: 'Laila', serif;
-  font-weight: 400;
-  font-size: 1em;
   color: #006622;
   margin: 0;
 }
